# rag-byok-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_backup.txt
evaluation_results/: answer_eval_baseline.json  answer_eval_k_3.json  evaluation_writeup.md  retrieval_screening_results.csv  validated_questions.json
services/: auth_service.py  db_utils.py  doc_processing.py  document_io.py  file_management_utils.py  inference_engine.py  vectorstore.py
services/assets/: prompts.py
services/dependencies/: engine_manager.py
